# router/user.go
@@ -3,7 +3,6 @@ package router
 import (
 	"github.com/dotdancer/gogofly/api"
 	"github.com/gin-gonic/gin"
-	"net/http"
 )
 
 func InitUserRouter() {
@@ -12,32 +11,12 @@ func InitUserRouter() {
 		rgPublicUser := rgPublic.Group("/user")
 		{
 			rgPublicUser.POST("/login", userApi.Login)
-			rgPublicUser.GET("/dome", func(ctx *gin.Context) {
-				ctx.AbortWithStatusJSON(http.StatusOK, gin.H{
-					"data": []map[string]any{
-						{"id": 1, "name": "张三"},
-						{"id": 2, "name": "李四"},
-					},
-				})
-			})
-
 		}
 
 		rgAuthUser := rgAuth.Group("/user")
-		rgAuthUser.GET("", func(ctx *gin.Context) {
-			ctx.AbortWithStatusJSON(http.StatusOK, gin.H{
-				"data": []map[string]any{
-					{"id": 1, "name": "张三"},
-					{"id": 2, "name": "李四"},
-				},
-			})
-		})
-
-		rgAuthUser.GET("/:id", func(ctx *gin.Context) {
-			ctx.AbortWithStatusJSON(http.StatusOK, gin.H{
-				"id":   1,
-				"name": "张三",
-			})
-		})
+		{
+			rgAuthUser.POST("/addUser", userApi.AddUser)
+			rgAuthUser.GET("/getUserById/:id", userApi.GetUserById)
+		}
 	})
 }
